# buxn-dbg

./: .gitmodules  CMakeLists.txt  README.md  watch
.github/workflows/: build.yml
src/: CMakeLists.txt  barg.h  bio_termbox2.c  bio_termbox2.h  breakpoint.c  breakpoint.h  btmp_buf.h  client.c  client.h  cmd.c  cmd.h  cmd_dev_log.c  cmd_dev_logd.c  cmd_help.c  cmd_info.c  cmd_log.c  cmd_server.c  cmd_view_breakpoints.c  cmd_view_memory.c  cmd_view_rst.c  cmd_view_source.c  cmd_view_wst.c  common.c  common.h  libs.c  logger.c  logger.h  main.c  protocol.c  protocol.h  symbol.c  symbol.h  tui.c  tui.h
src/server/: client.c  client.h  server.c  server.h  vm.c  vm.h
