set(SOURCES
	"main.c"
	"cmd.c"
	"common.c"
	"protocol.c"
	"cmd_help.c"
	"cmd_server.c"
	"cmd_view_memory.c"
	"cmd_info.c"
	"cmd_log.c"
	"server/server.c"
	"server/client.c"
	"server/vm.c"
	"client.c"
	"logger.c"
	"bio_termbox2.c"
	"libs.c"
)
add_executable(buxn-dbg ${SOURCES})
target_link_libraries(
	buxn-dbg
	PRIVATE
	bio
	blibs
	termbox2
	buxn-dbg-core
	buxn-dbg-protocol
)
